--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aaaaaaaaaah",
-  "homepage": "http://{ucis-cmd}.github.io/{website-demo-1}",
+  "homepage": "http://ucis-cmd.github.io/website-demo-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
